# AgentFlow

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/agentflow-cli/: Cargo.toml
crates/agentflow-cli/src/: agent_commands.rs  agent_ops_commands.rs  cli_args.rs  lib.rs  llm_commands.rs  main.rs  module_commands.rs  synth_commands.rs
crates/agentflow-cli/tests/: clap_no_argv_roundtrip.rs  cohort_param_infer_cap.rs  composition_staging.rs  flow_module_cli.rs  jobs_cli.rs  local_survival_assoc.rs  module_answer_chain.rs  module_cli.rs  module_producer_chain.rs  multi_step_chain.rs  success_path_affirm.rs
crates/agentflow-core/: Cargo.toml
crates/agentflow-core/src/: agent.rs  argument.rs  branch.rs  comparison.rs  domain.rs  forage.rs  graph_patch.rs  handoff.rs  hypothesis.rs  lib.rs  observer.rs  report.rs  research.rs  tool_select.rs  trace_guard.rs
crates/agentflow-core/src/runtime/: backend.rs  mod.rs  schedule.rs
crates/agentflow-core/src/storage/: artifact_registry.rs  flow_registry.rs  migrations.rs  mod.rs  module_registry.rs  project_store.rs  schema.rs  tool_registry.rs  yaml.rs
crates/agentflow-desktop/: README.md  index.html  package-lock.json  package.json
crates/agentflow-desktop-api/: Cargo.toml
crates/agentflow-desktop-api/src/: lib.rs
crates/agentflow-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/agentflow-desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/agentflow-schemas/: Cargo.toml
docs/: CAPABILITIES.md  agentflow-agent-control-layer-design.md  agentflow-delivery-control-plane.md  agentflow-product-development.md  agentflow-subagent-delivery-plan.md  agentflow-technical-design.md  agentflow-v0-runtime-mvp-spec.md
docs/design/: agent-module-composition-design.md  agent-scheduling-design.md  async-execution-design.md  container-backend-design.md  desktop-ui-design.md  isolated-execution-engine-design.md  multi-engine-container-design.md  parallel-execution-design.md  tool-evolution-engine-design.md
docs/ops/: egress-containment.md
docs/status/: af1-auto-flow-plan.md  agent-module-answer-proof.md  agent-module-composition-proof.md  agent-run-retries-proof.md  as1-auto-synth-plan.md  as10-egress-hardening-plan.md  as11-proxy-aware-probe-dns-pin-plan.md  as12-citation-auditability-plan.md  as13-methods-tools-report-plan.md  as14-mechanism-spawn-plan.md  as15-output-domain-validation-plan.md  as16-generalization-candidate-detection-plan.md  as17-generalization-validation-plan.md  as17.1-cohort-inference-grounding-plan.md  as17.2-cohort-selection-quality-plan.md  as18-tool-lineage-supersede-plan.md  as19-core-cohort-param-plan.md  as2-hardening-defaults-plan.md  as20-promotable-autoregister-plan.md  as3-synth-runtime-contract-plan.md  as4-synth-test-fix-loop-plan.md  as5-api-discovery-grounding-plan.md  as6-verified-cbioportal-client-plan.md  as7-autonomous-source-discovery-plan.md  as8-question-aware-fundamental-plan.md  as8.1-question-aware-fit-plan.md  f2-dep-wiring-plan.md  (+99 more)
scripts/: acceptance-session.sh  acceptance-v1.sh  verify-egress-policy.sh
(+36 files in other folders)
