[workspace]
members = [
    "crates/agentflow-cli",
    "crates/agentflow-core",
    "crates/agentflow-schemas",
]
resolver = "2"

[workspace.package]
version = "0.3.4"
edition = "2021"
license = "MIT"
description = "CLI-first local autonomous research runtime for scientific task graphs, with an auditable hypothesis → evidence → verdict control layer."
repository = "https://github.com/dxsbiocc/AgentFlow"

[workspace.lints.rust]
unsafe_code = "forbid"

