[package]
name = "agentflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentflow-schemas = { path = "../agentflow-schemas" }
rusqlite = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
