[package]
name = "agentflow-desktop-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Read-only Rust facade over agentflow-core for desktop/GUI frontends"

[dependencies]
agentflow-core = { path = "../agentflow-core" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
